<resources>
    <string name="app_name">Inventory</string>
    <string name="txvSignIn">Acceder</string>
    <string name="txvUser">Nombre de usuario / correo electrónico</string>
    <string name="txvPassword">Contraseña</string>
    <string name="chkRemember">Recordar usuario</string>
    <string name="btnSignUp"><u>Registro</u></string>
    <string name="btnSignIn">Acceder</string>
    <string name="btnGoogleSignIn">Google</string>
    <string name="btnFacebookSignIn">Login in with Facebook</string>

    <string name="tvxName">Nombre:</string>
    <string name="txvDescription">Descripción:</string>
    <string name="txvDateCreation">Fecha Creación:</string>
    <string name="btnChange">Cambiar Estado</string>
    <string name="txvSerial">Serial:</string>
    <string name="txvSeller">Vendedor:</string>
    <string name="txvModel">Modelo:</string>
    <string name="txvCategory">Categoría:</string>
    <string name="txvSubcategory">Subcategoría:</string>
    <string name="txvType">Tipo:</string>
    <string name="txvPrice">Precio:</string>
    <string name="txvUrl">Url:</string>
    <string name="txvNotes">Notas:</string>
    <string name="imgProduct">Imagen del producto</string>
    <string name="imgCodeQR">Código QR</string>

    <string-array name="spnCategory">
        <item>Periférico</item>
    </string-array>
    <string-array name="spnSubcategory">
        <item>Monitor</item>
    </string-array>
    <string-array name="spnType">
        <item>Inventariable</item>
    </string-array>

    <!---->
    <string name="txvSectorDefault">Sector por defecto</string>
    <string name="menu_save">Salvar</string>
</resources>
